@@ -1,3 +1,12 @@
+2018-03-09  Jason Merrill  <jason@redhat.com>
+	    Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/71169
+	PR c++/71832
+	* g++.dg/cpp0x/pr71169.C: New.
+	* g++.dg/cpp0x/pr71169-2.C: Likewise.
+	* g++.dg/cpp0x/pr71832.C: Likewise.
+
 2018-03-09  Peter Bergner  <bergner@vnet.ibm.com>
 
 	PR target/83969
